# vanilla

./: .gitignore  CMakeLists.txt  Vanilla.kdev4  main.cpp
cmake/Modules/: FindGMP.cmake  FindLibFFI.cmake
include/vanilla/: array_object.hpp  ast_base.hpp  bool_object.hpp  context.hpp  error.hpp  expression_ast.hpp  float_object.hpp  function_object.hpp  int_object.hpp  native_function_object.hpp  native_library_cache.hpp  none_object.hpp  object.hpp  parsing.hpp  scanner.hpp  statement_ast.hpp  str_range.hpp  string_object.hpp
src/: array_object.cpp  ast_base.cpp  bool_object.cpp  context.cpp  expression_ast.cpp  float_object.cpp  function_object.cpp  int_object.cpp  native_function_object.cpp  native_library_cache.cpp  none_object.cpp  object.cpp  parsing.cpp  scanner.cpp  statement_ast.cpp  string_object.cpp
